# 001_doc_extraction_platform

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: tasks.py
app/agent/: graph.py  prompts.py  tools.py
app/api/routes/: documents.py  query.py
app/ingestion/: chunker.py  embedder.py  extractor.py
app/observability/: tracing.py
app/storage/: cache.py  db.py  vector_store.py
